# PokedexDataService/src/main/openapi/openapi.yaml
@@ -16,12 +16,26 @@ tags:
       description: "Find out more"
       url: "http://swagger.io"
 paths:
+  /ping:
+    get:
+      summary: pings the service to check its health
+      operationId: ping
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: string
+                example: i'm alive
+        404:
+          description: service unavailable
   /pokemon:
     post:
       tags:
         - "pokemon"
       summary: create a pokemon object in database
-      operationId: createPokemon
+      operationId: getPokemon
       parameters:
         - in: header
           name: apiKey
@@ -30,7 +44,7 @@ paths:
             type: string
           required: true
       requestBody:
-        description: create pokemon request
+        description: get pokemon request
         content:
           application/json:
             schema:
